# auto-rag

./: .env.example  .gitignore  LICENSE  MEMVID-SDK2-FIX.md  MEMVID-VECIDX-FIX.md  README.md  RESULE-FBL.md  benchmark_results.json  build_dataset.py  eval_golden_unified.py  gateway.toml  golden_eval_report.json  golden_report_unified.json  pyproject.toml  requirements.txt
.auto-rag-gateway/: episodes.jsonl
chroma/: rag_config.py  rag_indexer.py
dataset/: eval_lodestone.py  golden_set_lodestone.json
docs/: ADR-001-knowledge-gateway.md  ADR-002-model-runtime.md  ADR-003-adaptive-loop.md  ADR-004-local-workstation-rag.md  ADR-005-trusted-local-execution-domain.md  ADR-006-stabilization-before-expansion.md  ADR-007-canonical-dedup.md  ADR-008-offline-sync.md  ADR-009-allowlisted-fulltext.md  ADR-INDEX.md  ARCHITECTURE.md  COMPATIBILITY.md  EXPERIMENTAL.md  MIGRATION-PLAN.md  OPERATIONS.md  ROLLBACK.md  mcp-schema.md  porting-checklist.md
infographic/: auto-rag-memvid-pipeline.html
rag_core/: .gitignore  benchmark_rag.py  calibrate_judge.py  canary_deploy.py  chroma_adapter.py  cli.py  compound.py  dcd_learner.py  dcd_router.py  dcd_router_llm.py  embedding_service.py  eval_golden.py  evidence.py  federated_endpoint.py  golden_eval_report.json  golden_set.json  golden_set_adversarial.json  hermes_memory_cli.py  index_common.py  indexer.py  integration_patch.py  llm_service.py  lm_studio_monitor.py  local_reranker.py  memvid_canary.py  memvid_config_bridge.py  memvid_memory.py  memvid_trace.py  memvid_trace_adapter.py  query_context.py  rag_async.py  rag_config.py  rag_federated.py  rag_golden.json  rag_mcp_client.py  rag_reindex.py  rag_search.py  rag_trace.py  requirements.txt  reranker_service.py  (+8 more)
rag_v2/: __init__.py  decomposer.py  engine.py  eval.py  fuser.py  mcp.py
scripts/: benchmark.py  docker-searxng.sh  install_memvid.sh  precommit-guard.py  rag_reindex_check.py  warmup.py
tests/: conftest.py  test_audit_regressions_p0p1.py  test_audit_round2.py  test_canary_deploy.py  (+38 more)
(+334 files in other folders)
