[project]
name = "auto-rag"
version = "0.2.0"
description = "Local-first RAG with LM Studio backend and federation"
requires-python = ">=3.11"
dependencies = [
    "zvec>=0.5.0",
    "trafilatura>=2.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
gateway = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
memory = [
    "memvid-sdk>=2.0",
]
chroma = [
    "chromadb>=0.4.0",
]
reranker = [
    "sentence-transformers>=3.0",
]
web = [
    # trafilatura is already in the base deps; this extra is a marker for
    # environments that want explicit web-retrieval capability enabled.
    "requests>=2.31.0",
]
pdf = [
    "pymupdf>=1.23.0",
    "pdfplumber>=0.10.0",
]

[project.scripts]
auto-rag = "rag_core.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_core*", "rag_v2*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
